--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0>"
-    <title>Document</title>
+    <link rel="stylessheet" href="assets/styles.css">
+    <title>Flashcard</title>
 </head>
 <body>
-
-
-</body>
-</html>
-<html lang="pt-br">
-    <head>
+    <main> 
+        <section id="container">
+             <article class="cartao"
+                   <div class="cartao__conteudo">
+                        <h3>Programação</h3>
+                        <div class="cartao__conteudo__pergunta">
+                             O que é JavaScript?
+                        </div>
+                          
       <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Flashcard</title>
@@ -36,7 +40,7 @@
                    </div>
                   </div>
                       
-   </article>
+      </article>
    <div class="cartao__conteudo__pergunta">
     <p>O que é Java Script?</p>
 </div>                        
